
		CHANGES in `multcomp' VERSION 0.991-4

    o    Depends: stats


		CHANGES in `multcomp' VERSION 0.991-3

    Implement feature requests by Rich Heiberger <rmh@temple.edu>:

    o    glht.mcp adds a `focus' element to the returned object
         containing the names of the factors under test

    o    plot.glht calls plot.confint.glht

    o    documentation updates

    o    fixed three minor bugs


		CHANGES in `multcomp' VERSION 0.991-2

    o    mcp(fact = K) with K = contrMat(...) didn't work
         spotted by Yves Brostaux <brostaux.y@fsagx.ac.be>
