@@ -1,5 +1,5 @@
 
-R version 2.5.0 Under development (unstable) (2006-10-18 r39668)
+R version 2.5.0 Under development (unstable) (2006-12-04 r40121)
 Copyright (C) 2006 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -16,8 +16,6 @@ Type 'contributors()' for more information and
 Type 'demo()' for some demos, 'help()' for on-line help, or
 'help.start()' for an HTML browser interface to help.
 Type 'q()' to quit R.
-
-[Previously saved workspace restored]
 
 R> invisible(options(echo = TRUE))
 R> 
@@ -37,26 +35,6 @@ R> ################################################################
 R> 
 R> library("multcomp")
 Loading required package: mvtnorm
-
-Attaching package: 'multcomp'
-
-
-	The following object(s) are masked _by_ .GlobalEnv :
-
-	 cholesterol 
-
-	The following object(s) are masked _by_ .GlobalEnv :
-
-	 detergent 
-
-	The following object(s) are masked _by_ .GlobalEnv :
-
-	 litter 
-
-	The following object(s) are masked _by_ .GlobalEnv :
-
-	 waste 
-
 R> set.seed(290875)
 R> load(system.file("MCMT/MCMT.rda", package = "multcomp"))
 R> 
@@ -1593,17 +1571,17 @@ Fit: lmer(formula = wloss ~ diet + (1 | i), data = wloss, model = TRUE)
 Estimated Quantile = 2.7285
 
 Linear Hypotheses:
-           Estimate lwr      upr     
-B - A == 0 -1.03000 -2.18867  0.12867
-C - A == 0 -1.78000 -2.93867 -0.62133
-D - A == 0 -2.78000 -3.93867 -1.62133
-E - A == 0  0.12000 -1.03867  1.27867
-C - B == 0 -0.75000 -1.90867  0.40867
-D - B == 0 -1.75000 -2.90867 -0.59133
-E - B == 0  1.15000 -0.00867  2.30867
-D - C == 0 -1.00000 -2.15867  0.15867
-E - C == 0  1.90000  0.74133  3.05867
-E - D == 0  2.90000  1.74133  4.05867
+           Estimate  lwr       upr      
+B - A == 0 -1.030000 -2.188656  0.128656
+C - A == 0 -1.780000 -2.938656 -0.621344
+D - A == 0 -2.780000 -3.938656 -1.621344
+E - A == 0  0.120000 -1.038656  1.278656
+C - B == 0 -0.750000 -1.908656  0.408656
+D - B == 0 -1.750000 -2.908656 -0.591344
+E - B == 0  1.150000 -0.008656  2.308656
+D - C == 0 -1.000000 -2.158656  0.158656
+E - C == 0  1.900000  0.741344  3.058656
+E - D == 0  2.900000  1.741344  4.058656
 
 95% family-wise confidence level
  
@@ -1625,7 +1603,7 @@ B - A == 0  -1.0300     0.4247  -2.425  0.1085
 C - A == 0  -1.7800     0.4247  -4.192   <0.01 ***
 D - A == 0  -2.7800     0.4247  -6.546   <0.01 ***
 E - A == 0   0.1200     0.4247   0.283  0.9986    
-C - B == 0  -0.7500     0.4247  -1.766  0.3939    
+C - B == 0  -0.7500     0.4247  -1.766  0.3938    
 D - B == 0  -1.7500     0.4247  -4.121   <0.01 ***
 E - B == 0   1.1500     0.4247   2.708  0.0528 .  
 D - C == 0  -1.0000     0.4247  -2.355  0.1274    
@@ -1659,16 +1637,16 @@ Estimated Quantile = 3.049
 
 Linear Hypotheses:
              Estimate lwr      upr     
-d2 - d1 == 0  -2.3240  -4.9075   0.2595
-d3 - d1 == 0   3.4820   0.8985   6.0655
-d4 - d1 == 0   2.3271  -0.2564   4.9106
-d5 - d1 == 0  -4.3787  -6.9622  -1.7953
-d3 - d2 == 0   5.8060   3.2225   8.3894
-d4 - d2 == 0   4.6511   2.0676   7.2346
-d5 - d2 == 0  -2.0547  -4.6382   0.5287
-d4 - d3 == 0  -1.1549  -3.7383   1.4286
-d5 - d3 == 0  -7.8607 -10.4442  -5.2772
-d5 - d4 == 0  -6.7058  -9.2893  -4.1224
+d2 - d1 == 0  -2.3241  -4.9077   0.2596
+d3 - d1 == 0   3.4819   0.8983   6.0656
+d4 - d1 == 0   2.3272  -0.2565   4.9108
+d5 - d1 == 0  -4.3787  -6.9624  -1.7951
+d3 - d2 == 0   5.8060   3.2223   8.3896
+d4 - d2 == 0   4.6512   2.0676   7.2349
+d5 - d2 == 0  -2.0547  -4.6383   0.5290
+d4 - d3 == 0  -1.1548  -3.7384   1.4289
+d5 - d3 == 0  -7.8607 -10.4443  -5.2770
+d5 - d4 == 0  -6.7059  -9.2896  -4.1223
 
 95% family-wise confidence level
  
@@ -1696,10 +1674,10 @@ Fit: lmer(formula = waste ~ temp + (1 | envir) + (1 | envir:temp),
 Estimated Quantile = 2.8576
 
 Linear Hypotheses:
-             Estimate lwr      upr     
-t2 - t1 == 0 -0.24100 -2.40369  1.92169
-t3 - t1 == 0  2.01500 -0.14769  4.17769
-t3 - t2 == 0  2.25600  0.09331  4.41869
+             Estimate lwr     upr    
+t2 - t1 == 0 -0.2410  -2.4033  1.9213
+t3 - t1 == 0  2.0150  -0.1473  4.1773
+t3 - t2 == 0  2.2560   0.0937  4.4183
 
 95% family-wise confidence level
  
@@ -1865,5 +1843,6 @@ R>
 R> ### heart, 222
 R> 
 R> proc.time()
-[1] 466.949   0.436 470.933   0.000   0.000
+   user  system elapsed 
+466.141   0.168 467.611 
 R> 
