@@ -3,6 +3,9 @@
 
     o    Depends: stats
 
+    o    confint(..., calpha = x) can be used to specify critical
+         values directly (with x being either a function or a scalar)
+
 
 		CHANGES in `multcomp' VERSION 0.991-3
 
